Fix date alignment

--- a/src/pages/FeedsTest.module.scss
+++ b/src/pages/FeedsTest.module.scss
@@ -187,6 +187,13 @@
   align-items: center;
 }
 
+.datePicker {
+  width: 442px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 
 .searchIcon {
   width: 16px;
